tests/invalid/loops/break_not_in_loop.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    break;
}